<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.afzaln.awakedebug.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_warning" />

        <TextView
            android:id="@+id/intro_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.25"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="4dp"
            android:text="@string/permission_needed"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.25"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/permissons_rationale"
            android:textSize="16sp"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:lineSpacingMultiplier="1.25"
            android:paddingBottom="4dp"
            android:text="@string/permissons_notification_access_title"
            android:textSize="16sp"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.25"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/permissons_notification_access_message"
            android:textSize="16sp"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.25"
            android:paddingBottom="4dp"
            android:text="@string/permissons_modify_settings_title"
            android:textSize="16sp"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.25"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/permissons_modify_settings_message"
            android:textSize="16sp"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.25"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/verifiable_builds_note"
            app:fontFamily="sans-serif-condensed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.25"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/github_repo_url"
            app:fontFamily="sans-serif-condensed" />

        <ViewFlipper
            android:id="@+id/notification_permission_flipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/notification_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow_notification_access" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawablePadding="8dp"
                android:text="@string/notification_access_granted"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_check_box"
                app:drawableTint="@color/primaryDarkColor" />

        </ViewFlipper>

        <ViewFlipper
            android:id="@+id/modify_settings_flipper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/modify_settings_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow_modify_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawablePadding="8dp"
                android:text="@string/modify_settings_granted"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_check_box"
                app:drawableTint="@color/primaryDarkColor" />

        </ViewFlipper>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
