<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.afzaln.awakedebug.ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/PrimaryToolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/toggle_debug"
        android:layout_width="match_parent"
        android:layout_height="@dimen/switch_height"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/on"
        android:textSize="18sp"
        android:theme="@style/SwitchTheme"
        tools:checked="true" />

    <LinearLayout
        android:id="@+id/debugging_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_of_debugging"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/debugging_type_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:selectionRequired="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/usb_debugging"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/wifi_debugging"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wireless" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/intro_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingMultiplier="1.25"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="12dp"
        android:text="@string/intro_1"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingMultiplier="1.25"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/intro_2"
        android:textSize="20sp"
        android:textStyle="italic" />

</LinearLayout>
